# Csnake

./: CMakeLists.txt  color.h  fruit.c  fruit.h  kbdlistener.c  kbdlistener.h  main.c  render.c  render.h  snake.c  snake.h
.github/workflows/: Dockerfile  build.yml  cmake.yml
